# HealthCoachAI

github/HealthCoachAI/: .env.garmin  .env.influx  .env.influxserver  .gitignore  Dockerfile  compose.yml  docker-compose.yml  pyproject.toml  requirements.txt  temp.ipynb
github/HealthCoachAI/app/: db_init.py
github/HealthCoachAI/app/models/: user.py
github/HealthCoachAI/drr/processes/sleep/: sleep.ipynb
github/HealthCoachAI/drr/src/: explore_data.ipynb  querying.py  vo2.py
github/HealthCoachAI/enricher/: Dockerfile  enricher.ipynb  enricher.py  pyproject.toml
github/HealthCoachAI/enricher/data/: sci_hr.csv  sleep_hr.csv  vo2_hr.csv
github/HealthCoachAI/enricher/drr/processes/: send_email.ipynb
github/HealthCoachAI/enricher/drr/processes/sleep/: sleep.ipynb
github/HealthCoachAI/enricher/drr/processes/vo2/: vo2.ipynb
github/HealthCoachAI/enricher/processes/: enricher.ipynb  explore_data.ipynb  sleep.ipynb  vo2.ipynb
github/HealthCoachAI/enricher/src/: bilateral_interpolation.py  querying.py
github/HealthCoachAI/enricher/src/data_enricher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
github/HealthCoachAI/enricher/src/tables/: sleep.py  vo2.py
github/HealthCoachAI/enricher/src/utils/: querying.py
github/HealthCoachAI/envs/: .env.influx
github/HealthCoachAI/fetcher/: .env  pyproject.toml
github/HealthCoachAI/fetcher/src/: garmin_fetch.py
github/HealthCoachAI/garmin_fetcher/: Dockerfile
github/HealthCoachAI/influxdb3-data/Influxdb-node1/: _catalog_checkpoint
github/HealthCoachAI/influxdb3-data/Influxdb-node1/wal/: 00000000002.wal  00000000004.wal  00000000005.wal  00000000009.wal  00000000012.wal  00000000013.wal  (+36 more)
github/HealthCoachAI/k8s/: kubernetes-spec-example.yaml  values.yaml
github/HealthCoachAI/spam/: .gitignore  docker-compose.yml
github/HealthCoachAI/spam/fetcher/: Dockerfile
github/HealthCoachAI/src/garmin/: garmin_fetch.py
github/new/: compose.yml
github/new/fetcher/: Dockerfile  garmin_fetch.py
(+1353 files in other folders)
