[project]
name = "garmin-fetcher"
version = "0.1.0"
description = "Fetches health data from Garmin Connect and writes it to InfluxDB."
requires-python = "==3.12.*"
dependencies = [
    "garth",           
    "garminconnect",   
    "fitparse",        
    "influxdb",        
    "influxdb3-python", 
    "python-dotenv",   
    "pytz",            
    "pandas",         
]